Fix element overlap event stuff

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ html, body {
   border-radius: 100%;
 }
 
-.arena {
+.gameContainer {
   border: 2px solid #303;
   background: #fef;
   margin: 20px auto;
@@ -24,4 +24,10 @@ html, body {
   height: 1px;
   border-bottom: 1px solid black;
   position: absolute;
+}
+
+.glass {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
